media uploading mechanism updated